<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/cardMarginVertical"
    android:layout_marginLeft="@dimen/cardMarginHorizontal"
    android:layout_marginRight="@dimen/cardMarginHorizontal"
    android:layout_marginTop="@dimen/cardMarginVertical"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="false"
    app:contentPadding="10dp">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster_image_view"
            android:layout_width="120dp"
            android:layout_height="160dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/poster_image_view"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="3"
                android:text="@string/title_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="3"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="marquee"
                android:maxLines="3"
                android:text="@string/genre_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genre_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="marquee"
                android:maxLines="3"
                android:text="@string/run_time_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/runtime_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/poster_image_view"
            android:layout_marginTop="5dp"
            android:ellipsize="marquee"
            android:maxLines="3"
            android:text="@string/rating_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/customRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_below="@id/rating_label"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:isIndicator="true" />
        <TextView
            android:id="@+id/censor_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:singleLine="true"
            android:layout_below="@id/poster_image_view"
            android:layout_toRightOf="@id/poster_image_view"
            android:text="@string/censor_rating_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/censor_rating_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_below="@id/censor_rating_label"
            android:layout_toRightOf="@id/poster_image_view"
            android:singleLine="true"
            android:textSize="16sp" />

    </RelativeLayout>


</android.support.v7.widget.CardView>